build_err.txt
   Compiling pico2w-shell-rs v0.1.0 (D:\Users\josco\workspace\pico2w\sample\pico2w-shell-rs)
error: couldn't read `src\../cyw43-firmware/nvram_rp2040.bin`: 吏?뺣맂 ?뚯씪??李얠쓣 ???놁뒿?덈떎. (os error 2)
   --> src\main.rs:137:17
    |
137 |     let nvram = cyw43::aligned_bytes!("../cyw43-firmware/nvram_rp2040.bin");
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: this error originates in the macro `include_bytes` which comes from the expansion of the macro `cyw43::aligned_bytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0382]: use of moved value: `control`
   --> src\main.rs:179:43
    |
157 |     let (_net_device, mut control, runner) = cyw43::new(state, pwr, spi, fw, nvram).await;
    |                       ----------- move occurs because `control` has type `Control<'_>`, which does not implement the `Copy` trait
...
178 |     spawner.spawn(unwrap!(blink_task(control)));
    |                                      ------- value moved here
179 |     spawner.spawn(unwrap!(uart_task(uart, control)));
    |                                           ^^^^^^^ value used here after move
    |
note: consider changing this parameter type in function `blink_task` to borrow instead if owning the value isn't necessary
   --> src\main.rs:34:34
    |
 34 | async fn blink_task(mut control: cyw43::Control<'static>) {
    |          ----------              ^^^^^^^^^^^^^^^^^^^^^^^ this parameter takes ownership of the value
    |          |
    |          in this function

For more information about this error, try `rustc --explain E0382`.
error: could not compile `pico2w-shell-rs` (bin "pico2w-shell-rs") due to 2 previous errors
